--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "highlight.js": "^11.9.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
